# HonkordGL

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CREDITS.md  LICENSE.md  Makefile  README.md
.github/workflows/: ci.yml
android/: README.md  settings.gradle.kts
android/bindings/: spec.json
android/honkord-android/: build.gradle.kts  consumer-rules.pro
android/honkord-jvm/: build.gradle.kts
android/native-bridge/: CMakeLists.txt
android/native-bridge/include/: honkord_jni_bridge.h
android/native-bridge/src/: generated_bindings.cpp  honkord_jni_bridge.cpp
android/scripts/: generate_bindings.py  package_native.ps1  package_native.sh
build-consumer/: CMakeCache.txt  Makefile  cmake_install.cmake  consume
build-linux-verify/: CMakeCache.txt  Makefile  cmake_install.cmake
build-test/: CMakeCache.txt  HonkordGLConfig.cmake  Makefile  cmake_install.cmake  honkordgl.pc  install_manifest.txt
bundles/: HonkordGL.cpp  HonkordGL.h  README.md
bundles/C/: HonkordGL_C.cpp  HonkordGL_C.h
bundles/HonkordGL_ImGui/: imgui_impl_honkordgl.cpp  imgui_impl_honkordgl.h
bundles/HonkordGL_Nuklear/: nuklear_impl_honkordgl.cpp
cmake/: BuildFeatures.h.in  HonkordGL.cmake  HonkordGLApple.cmake  HonkordGLConfig.cmake.in  WaylandProtocols.cmake  honkordgl.pc.in
cmake/toolchains/: mingw-i686.cmake  mingw-x86_64.cmake
docs/: DevelopmentPlan.md  KnownLimitations.md  SupportMatrix.md
docs/backends/: audio.md  direct3d11.md  metal.md  opengl.md  vulkan.md
docs/md_files/: Audio.md  DevelopmentPlan.md  Joysticks.md  Rendering.md  WindowHandling.md
include/HonkordGL/: AndroidNativeApp.h  Audio.h  BackendCapabilities.h  Camera.h  CocoaIpcWindow.h  Config.h  Core.h  Cursor.h  DeferredRendererSample.h  Direct3DIntegration.h  Eclipse.h  Events.h  Extras.h  GpuApiBoundary.h  GpuCapabilities.h  GpuGlStateTracker.h  GpuRenderGraph.h  GpuRenderPassEncoder.h  GpuRenderTarget.h  GpuRenderer.h  GpuShaderCompiler.h  GpuTypes.h  HonkordGL.h  Joystick.h  Lines.h  LinuxDisplayIntegration.h  LinuxEvdevIntegration.h  MetalIntegration.h  OpenGlIntegration.h  PlatformAdapter.h  RendererContext.h  Software2DContext.h  SoftwareBlitCollector.h  SoftwareBlitCollectorAlt.h  SoftwareBlitCollectorOps.h  SoftwareRenderer.h  Sprite.h  TextUI.h  TextUI.h~  Video.h  (+5 more)
mingw/: CMakeLists.txt  README.md  toolchain-i686-win32.cmake  toolchain-x86_64-win32.cmake
misc/: regenerate_pkgconfig.py
scripts/: check_public_headers.py
src/: BackendCapabilities.cpp  Camera.cpp  DeferredRendererSample.cpp  Direct3DIntegrationStub.cpp  Eclipse.cpp  Font.h  GpuCapabilities.cpp  GpuRenderGraph.cpp  GpuRenderTarget.cpp  GpuRenderer.cpp  GpuShaderCompiler.cpp  Lines.cpp  LinuxDisplayIntegration.cpp  LinuxEvdevIntegration.cpp  MetalIntegrationStub.cpp  OpenGlIntegration.cpp  Software2DContext.cpp  SoftwareBlitCollector.cpp  SoftwareBlitCollectorAlt.cpp  SoftwareRenderer.cpp  Sprite.cpp  TextUI.cpp  Video.cpp  VulkanIntegrationStubs.cpp  VulkanRendererContext.cpp  VulkanWindowHelper.cpp  WindowBackend.cpp
src/Android/: AndroidNativeApp.cpp  AndroidWindowContext.hpp  EGLRendererContextAndroid.cpp  EventsAndroid.cpp  WindowBackend.cpp  WindowBackend.hpp
src/Audio/: Aaudio.cpp  AudioAlsa.cpp  AudioDecodeCommon.cpp  AudioDecodeCommon.hpp  AudioFeatures.cpp  CoreAudio.cpp  PipeWire.cpp  Wasapi.cpp
src/Cocoa/: CocoaIpcWindow.mm  DisplayMonitorPoll.hpp  DisplayMonitorPoll.mm  DisplayRefresh.hpp  EventsCocoa.mm  MetalRendererContext.mm  MetalRendererContextDisabled.mm  MonitorsCocoa.hpp  MonitorsCocoa.mm  NSOpenGLRendererContext.mm  PlatformSession.hpp  PlatformSession.mm  WindowBackend.hpp  WindowBackend.mm
src/DRM/: DRMWindowContext.hpp  EventsDRM.cpp  WindowBackend.cpp  WindowBackend.hpp
src/FreeBSD/: PlatformSession.cpp  PlatformSession.hpp  WindowBackend.cpp  WindowBackend.hpp
src/Graphics/: Utils.hpp
src/Joystick/: Joystick.cpp
src/NetBSD/: PlatformSession.cpp  PlatformSession.hpp  WindowBackend.cpp  WindowBackend.hpp
src/RaspberryPi/: PlatformSession.cpp  PlatformSession.hpp  WindowBackend.cpp  WindowBackend.hpp
src/Wayland/: EGLRendererContextWayland.cpp  EventsWayland.cpp  IpcWayland.cpp  PlatformSession.cpp  PlatformSession.hpp  WaylandWindowContext.hpp  WindowBackend.cpp  WindowBackend.hpp
src/Win32/: D3D11RendererContext.cpp  D3D11RendererContextDisabled.cpp  EventsWin32.cpp  WGLRendererContext.cpp  Win32WindowContext.hpp  WindowBackend.cpp  WindowBackend.hpp
src/X11/: CursorX11.cpp  CursorX11.hpp  EGLRendererContextX11.cpp  EventsX11.cpp  GLXRendererContext.cpp  IpcHelperWindow.cpp  MonitorsX11.cpp  MonitorsX11.hpp  PlatformSession.cpp  PlatformSession.hpp  RandrMonitorPoll.cpp  RandrMonitorPoll.hpp  RandrRefresh.hpp  WindowBackend.cpp  WindowBackend.hpp
src/internal/: D3D11RendererContextWin32.hpp  DeferredRendererGpuApi.cpp  DeferredRendererGpuApi.h  DesktopGlIncludes.h  HonkordGlPassOps.hpp
tests/Audio/: TestAudioSmoke  TestAudioSmoke.cpp
tests/DeferredRenderer/: TestDeferredRenderer  TestDeferredRenderer.cpp
tests/DrawSprite/: TestSprite.cpp
tests/Portability/: TestBackendCapabilities  TestBackendCapabilities.cpp  TestUmbrellaInclude  TestUmbrellaInclude.cpp
tests/Window/: TestWindow.cpp
tests/cmake_consumer/: CMakeLists.txt  main.cpp
visualC/: AsteroidGame.vcxproj  CameraPlayer.vcxproj  Checkerboard.vcxproj  GPURaytracing.vcxproj  HonkordGL.Shared.props  HonkordGL.sln  HonkordGL.vcxproj  MovingSquare.vcxproj  README.md  SplitScreen.vcxproj  TestAudioSmoke.vcxproj  TestDeferredRenderer.vcxproj  TestSprite.vcxproj  TestWindow.vcxproj  Tetris.vcxproj
visualC_gdk/: AsteroidGame.vcxproj  CameraPlayer.vcxproj  Checkerboard.vcxproj  GPURaytracing.vcxproj  HonkordGL.GDK.Shared.props  HonkordGL.vcxproj  MovingSquare.vcxproj  README.md  SplitScreen.vcxproj  TestAudioSmoke.vcxproj  TestDeferredRenderer.vcxproj  TestSprite.vcxproj  TestWindow.vcxproj  Tetris.vcxproj
wayland/: CMakeLists.wayland-protocols.cmake  README.md  generate_protocols.py  protocols.json
works/AsteroidGame/: Main.cpp  VulkanNoop.cpp
works/CameraPlayer/: CameraPlayer  (+1 more)
xcode/: README.txt
(+149 files in other folders)
